buildscript {
    dependencies {
        classpath 'com.google.cloud.tools:appengine-gradle-plugin:2.4.2'
    }
}

plugins {
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
}

group = 'watchitnow'
version = '0.0.1-SNAPSHOT'


repositories {
    mavenCentral()
    google()
    gradlePluginPortal()
}


configurations {
    configureEach {
        exclude group: 'commons-logging', module: 'commons-logging'
    }
}

apply plugin: 'com.google.cloud.tools.appengine'

java {
    sourceCompatibility = '17'
    targetCompatibility = '17'
}


dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.json:json:20090211'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.modelmapper:modelmapper:3.2.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.1'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.1'
    implementation 'com.google.cloud:google-cloud-secretmanager:2.1.0'
    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'me.paulschwarz:spring-dotenv:3.0.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
    testImplementation 'org.mockito:mockito-core:4.8.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.8.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.maciejwalkowiak.spring:wiremock-spring-boot:2.1.2'
    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'com.mysql:mysql-connector-j'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testRuntimeOnly 'org.hsqldb:hsqldb'
}
